テキスト調整

--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
     </section>
     <!-- ９つの特徴セクション -->
     <section
-      class="w-[90%] lg:w-[960px] mx-auto py-9 lg:pb-20 md:pt-20 lg:pt-[150px]"
+      class="w-[90%] lg:w-[960px] mx-auto py-12 lg:pb-20 md:pt-20 lg:pt-[150px]"
     >
       <div class="text-center">
         <h2
@@ -1451,9 +1451,11 @@
           </li>
         </ul>
         <p
-          class="scroll-fade mt-9 text-[0.9rem] md:mt-[80px] lg:mt-[150px] md:text-[1rem] lg:text-[1.2rem]"
+          class="scroll-fade mt-16 text-[0.9rem] md:mt-20 lg:mt-[150px] md:text-[1rem] lg:text-[1.2rem]"
         >
-          お客様の住環境・ライフプランに合わせ、<br />最新型・従来型ともに多数のメーカーをご用意しております。<br />他社で設置をお断りされた方もぜひ一度ご相談下さい。
+          お客様の住環境・ライフプランに合わせ、<br
+            class="lg:hidden"
+          />最新型・従来型ともに多数のメーカーをご用意しております。<br />他社で設置をお断りされた方もぜひ一度ご相談下さい。
         </p>
         <a
           href="#form"
@@ -1468,7 +1470,7 @@
     <!-- お客様の声セクション -->
     <section class="text-center">
       <div
-        class="scroll-fade w-[90%] lg:w-[960px] pt-8 pb-85text-center mx-auto"
+        class="scroll-fade w-[90%] lg:w-[960px] pt-4 pb-85text-center mx-auto"
       >
         <div class="relative">
           <img
